# blissWL

./: .gitignore  LICENSE.md  README.md  pyproject.toml
images_to_maps/: __init__.py  cached_dataset.py  convnet.py  convnet_layers.py  data_augmentation.py  encoder.py  flowmatching.py  metrics.py  plots.py  variational_dist.py
images_to_maps/dc2/: __init__.py  config_train_flowmatching.yaml  config_train_npe.yaml  config_train_npe_gl.yaml  dc2.py  generate_catalog.py  train.py  utils.py
images_to_maps/dc2/exploratory/: dc2imageandmaps.ipynb  ellipticity.ipynb  galaxyproperties.ipynb  generate_catalog.ipynb  twopoint.ipynb
images_to_maps/dc2/results/: credibleintervals.ipynb  posteriormeanmaps.ipynb
images_to_maps/descwl/: __init__.py  config_run_anacal.yaml  config_train_npe.yaml  config_train_npe_gl.yaml  run_anacal.py  train.py
images_to_maps/descwl/results/: compute_npe_credibleintervals.py  config_compute_npe_credibleintervals.yaml  credibleintervals.ipynb  scatterplots.ipynb
images_to_maps/utils/: weighted_avg_ellip.py
maps_to_cosmology/: datamodule.py  distributions.py  encoder.py  generate_maps.py  metrics.py  networks.py  prior.py  train.py
maps_to_cosmology/configs/: generate_lsst_y10_lognormal.yaml  generate_lssty10_lognormal.yaml  train_npe.yaml
maps_to_cosmology/notebooks/: convergencemaps.ipynb  results.ipynb
