[project]
name = "blissWL"
version = "0.1.0"
description = "Neural probabilistic mass mapping and cosmological parameter estimation."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "einops>=0.8.1",
    "hydra-core>=1.3.0",
    "jax[cuda12]>=0.6.1,<0.7",
    "jaxlib>=0.6.1,<0.7",
    "jax-cuda12-plugin>=0.6.1,<0.7",
    "jax-cuda12-pjrt>=0.6.1,<0.7",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "omegaconf>=2.3.0",
    "sbi_lens @ git+https://github.com/timwhite0/sbi_lens.git",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]

