[project]
name = "blissWL"
version = "0.1.0"
description = "Neural probabilistic mass mapping and cosmological parameter estimation."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "astropy>=6.0.0",
    "einops>=0.8.1",
    "hydra-core>=1.3.0",
    "jax[cuda12]>=0.6.1,<0.7",
    "jaxlib>=0.6.1,<0.7",
    "jax-cuda12-plugin>=0.6.1,<0.7",
    "jax-cuda12-pjrt>=0.6.1,<0.7",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0",
    "sbi_lens @ git+https://github.com/timwhite0/sbi_lens.git",
    "tensorboard>=2.18.0",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.66.0",
    "seaborn>=0.13.2",
    "pyccl>=3.2.1",
    "camb>=1.6.5",
    "treecorr>=5.1.2",
    "lsstdesc-gcr-catalogs>=1.10.1",
    "healpy>=1.19.0",
    "anacal>=0.7.3",
    "descwl-shear-sims",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["images_to_maps", "maps_to_cosmology"]

[tool.uv.sources]
descwl-shear-sims = { git = "https://github.com/LSSTDESC/descwl-shear-sims.git" }

